Updated multiple Ubuntu macines